--- a/index.html
+++ b/index.html
@@ -1171,7 +1171,7 @@
             <p>Selamat Yaa! 💕</p>
             <p>
               Akhirnya kamu berhasil<br />
-              menyelesaikan seminar proposal<br />
+              menyelesaikan ujian proposalnya<br />
               Setiap langkahmu, setiap malam begadang,<br />
               setiap keraguan yang kamu lalui—<br />
               semua terbayar indah hari ini
